--- a/frontend/quizResult.html
+++ b/frontend/quizResult.html
@@ -15,10 +15,8 @@
 
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="#logout">Logout</a></li>
+                <li><a href="#" id="dashboard-btn">Dashboard</a></li>
+                <li><a href="#" id="logout-btn">Logout</a></li>
             </ul>
         </nav>
         </header>
@@ -32,6 +30,7 @@
             </div>
 
             <div class="feedback" id="feedback"></div>
+
             <div class="actions">
                 <button onclick="retakeQuiz()">Retake Quiz</button>
                 <button onclick="reviewAnswers()">Review Answers</button>
