--- a/frontend/dashboardTeachers.html
+++ b/frontend/dashboardTeachers.html
@@ -26,13 +26,14 @@
       <h1 class="text-2xl font-bold text-gray-800">DASHBOARD TEACHER</h1>
 
       <div class="relative group">
+
         <div class="logo flex items-center space-x-2 p-2 rounded-md hover:bg-gray-100 transition duration-300 cursor-pointer">
           <img src="images/quzify4.png" alt="Quizify Logo" class="h-10" />
           <i class="fas fa-caret-down text-gray-600"></i>
         </div>
 
         <!-- ✅ Dropdown menu with correct IDs -->
-        <div class="absolute right-0 mt-2 w-32 bg-white rounded-md shadow-lg py-1 hidden group-hover:block z-50">
+        <div class="absolute right-0 mt-2 w-32 bg-white rounded-md shadow-lg py-1 hidden group-hover:block">
           <a href="#" id="profile-btn" class="block px-4 py-2 text-gray-800 hover:bg-gray-100">Profile</a>
           <a href="#" id="logout-btn" class="block px-4 py-2 text-gray-800 hover:bg-gray-100">Log out</a>
         </div>
