--- a/frontend/takeQuiz.html
+++ b/frontend/takeQuiz.html
@@ -14,10 +14,10 @@
 
   <main class="quiz-container">
     <form id="quiz-form"></form>
-    <button id="submit-btn">Submit Quiz</button>
+    <button id="submit-btn" class="hidden">Submit Quiz</button>
     <div id="result" class="hidden"></div>
   </main>
 
-  <script src="takeQuiz2.js"></script>
+  <script src="takeQuiz2.js" type="module"></script>
 </body>
 </html>
