--- a/frontend/takeQuiz.html
+++ b/frontend/takeQuiz.html
@@ -2,42 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Teacher Dashboard</title>
-
-  <!-- Tailwind CSS -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
-
-  <style>
-    body {
-      font-family: 'Inter', sans-serif;
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Take Quiz</title>
+  <link rel="stylesheet" href="takeQuiz1.css" />
 </head>
-
-<body class="bg-gray-100 min-h-screen flex items-center justify-center p-4">
-  <div class="dashboard-container relative w-full max-w-6xl bg-white shadow-lg rounded-xl overflow-hidden flex flex-col">
-
-    <!-- Header -->
-    <header class="p-4 bg-white flex justify-between items-center z-10 border-b border-gray-200">
-      <h1 class="text-2xl font-bold text-gray-800">DASHBOARD TEACHER</h1>
-
-      <div class="relative group">
-        <div class="logo flex items-center space-x-2 p-2 rounded-md hover:bg-gray-100 transition duration-300 cursor-pointer">
-          <img src="images/quzify4.png" alt="Quizify Logo" class="h-10" />
-          <i class="fas fa-caret-down text-gray-600"></i>
-        </div>
-
-        <!-- Dropdown menu with correct IDs -->
-        <div class="absolute right-0 mt-2 w-32 bg-white rounded-md shadow-lg py-1 hidden group-hover:block z-50">
-          <a href="#" id="profile-btn" class="block px-4 py-2 text-gray-800 hover:bg-gray-100">Profile</a>
-          <a href="#" id="logout-btn" class="block px-4 py-2 text-gray-800 hover:bg-gray-100">Log out</a>
-        </div>
-      </div>
-    </header>
+<body>
+  <header>
+    <h1 id="quiz-title">Loading quiz...</h1>
+    <p id="quiz-desc"></p>
+  </header>
 
   <main class="quiz-container">
     <form id="quiz-form"></form>
@@ -45,6 +18,6 @@
     <div id="result" class="hidden"></div>
   </main>
 
-  <script src="takeQuiz2.js"></script>
+  <script src="takeQuiz2.js" type="module"></script>
 </body>
 </html>
